# DiscordOnlineTimeTrackerBot

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  bot.py  config.py  database.py  pyproject.toml  tracker.py
scripts/: start_bot.py
tests/: test_tracker.py
